<resources>
    <string name="app_name">Sci_Calculator</string>

    <!-- Sayilar-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--İslem butonlari-->
    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="paranthesis">( )</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="percentage">%</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="secondPower">x²</string>
    <string name="thirdPower">x³</string>
    <string name="index">√</string>
    <string name="factorial">x!</string>
    <string name="adjustableindex">ʸ√x</string>
    <string name="eulerNumber">e</string>
    <string name="logarithmln">ln</string>
    <string name="logarithm">log</string>
    <string name="reverselogarithmln">eˣ</string>
    <string name="reverselogarithm">10ˣ</string>
    <string name="pinumber">π</string>
    <string name="reversenumber">1/x</string>
    <string name="sinusFunction">sin</string>
    <string name="cosinusFunction">cos</string>
    <string name="tangentFunction">tan</string>
    <string name="xValue">x</string>

    <!--Geri tusu-->

    <string name="backspace"> </string>

    <!--Deger girilecek TextView icerisindeki yazi-->
    <string name="display">Enter in a value</string>
  
</resources>